; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_vfs_mount.c_mount_init.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_vfs_mount.c_mount_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mount = type { i32, i32*, i64, i8*, i8*, i8*, i8*, i32, i32, i32 }

@.str = private unnamed_addr constant [17 x i8] c"struct mount mtx\00", align 1
@MTX_DEF = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [23 x i8] c"struct mount vlist mtx\00", align 1
@PVFS = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [8 x i8] c"explock\00", align 1
@pcpu_zone_int = common dso_local global i32 0, align 4
@M_WAITOK = common dso_local global i32 0, align 4
@M_ZERO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32, i32)* @mount_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mount_init(i8* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.mount*, align 8
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.mount*
  store %struct.mount* %9, %struct.mount** %7, align 8
  %10 = load %struct.mount*, %struct.mount** %7, align 8
  %11 = getelementptr inbounds %struct.mount, %struct.mount* %10, i32 0, i32 9
  %12 = load i32, i32* @MTX_DEF, align 4
  %13 = call i32 @mtx_init(i32* %11, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i32* null, i32 %12)
  %14 = load %struct.mount*, %struct.mount** %7, align 8
  %15 = getelementptr inbounds %struct.mount, %struct.mount* %14, i32 0, i32 8
  %16 = load i32, i32* @MTX_DEF, align 4
  %17 = call i32 @mtx_init(i32* %15, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.1, i64 0, i64 0), i32* null, i32 %16)
  %18 = load %struct.mount*, %struct.mount** %7, align 8
  %19 = getelementptr inbounds %struct.mount, %struct.mount* %18, i32 0, i32 7
  %20 = load i32, i32* @PVFS, align 4
  %21 = call i32 @lockinit(i32* %19, i32 %20, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.2, i64 0, i64 0), i32 0, i32 0)
  %22 = load i32, i32* @pcpu_zone_int, align 4
  %23 = load i32, i32* @M_WAITOK, align 4
  %24 = load i32, i32* @M_ZERO, align 4
  %25 = or i32 %23, %24
  %26 = call i8* @uma_zalloc_pcpu(i32 %22, i32 %25)
  %27 = load %struct.mount*, %struct.mount** %7, align 8
  %28 = getelementptr inbounds %struct.mount, %struct.mount* %27, i32 0, i32 6
  store i8* %26, i8** %28, align 8
  %29 = load i32, i32* @pcpu_zone_int, align 4
  %30 = load i32, i32* @M_WAITOK, align 4
  %31 = load i32, i32* @M_ZERO, align 4
  %32 = or i32 %30, %31
  %33 = call i8* @uma_zalloc_pcpu(i32 %29, i32 %32)
  %34 = load %struct.mount*, %struct.mount** %7, align 8
  %35 = getelementptr inbounds %struct.mount, %struct.mount* %34, i32 0, i32 5
  store i8* %33, i8** %35, align 8
  %36 = load i32, i32* @pcpu_zone_int, align 4
  %37 = load i32, i32* @M_WAITOK, align 4
  %38 = load i32, i32* @M_ZERO, align 4
  %39 = or i32 %37, %38
  %40 = call i8* @uma_zalloc_pcpu(i32 %36, i32 %39)
  %41 = load %struct.mount*, %struct.mount** %7, align 8
  %42 = getelementptr inbounds %struct.mount, %struct.mount* %41, i32 0, i32 4
  store i8* %40, i8** %42, align 8
  %43 = load i32, i32* @pcpu_zone_int, align 4
  %44 = load i32, i32* @M_WAITOK, align 4
  %45 = load i32, i32* @M_ZERO, align 4
  %46 = or i32 %44, %45
  %47 = call i8* @uma_zalloc_pcpu(i32 %43, i32 %46)
  %48 = load %struct.mount*, %struct.mount** %7, align 8
  %49 = getelementptr inbounds %struct.mount, %struct.mount* %48, i32 0, i32 3
  store i8* %47, i8** %49, align 8
  %50 = load %struct.mount*, %struct.mount** %7, align 8
  %51 = getelementptr inbounds %struct.mount, %struct.mount* %50, i32 0, i32 2
  store i64 0, i64* %51, align 8
  %52 = load %struct.mount*, %struct.mount** %7, align 8
  %53 = getelementptr inbounds %struct.mount, %struct.mount* %52, i32 0, i32 0
  store i32 1, i32* %53, align 8
  %54 = load %struct.mount*, %struct.mount** %7, align 8
  %55 = getelementptr inbounds %struct.mount, %struct.mount* %54, i32 0, i32 1
  store i32* null, i32** %55, align 8
  ret i32 0
}

declare dso_local i32 @mtx_init(i32*, i8*, i32*, i32) #1

declare dso_local i32 @lockinit(i32*, i32, i8*, i32, i32) #1

declare dso_local i8* @uma_zalloc_pcpu(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
